@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-25T01:00:49Z",
-  "count" : 3,
+  "timestamp" : "2023-10-08T01:04:44Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
