@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-10-06T16:18:06Z",
-  "count_outdated" : 866,
-  "uniques_outdated" : 511,
+  "timestamp" : "2023-10-08T01:04:44Z",
+  "count_outdated" : 869,
+  "uniques_outdated" : 512,
   "count" : 904,
   "uniques" : 533,
   "clones" : [
     {
-      "timestamp": "2023-09-23T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2023-09-24T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
