@@ -1,15 +1,10 @@
 {
-  "count": 38,
+  "count": 34,
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2023-09-23T00:00:00Z",
-      "count": 3,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-09-24T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
